--- a/TrollInstallerX-New.plist
+++ b/TrollInstallerX-New.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://jailbreaks.app/cdn/ipas/TrollInstallerX-resigned.ipa</string>
+					<string>https://grandchace.github.io/TrollInstallerX-resigned.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
